update product card

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electro-world",
-  "homepage": "https://github.com/Serhii-K5/electro-world/",
+  "homepage": "https://serhii-k5.github.io/electro-world/",
   "version": "1.0.0",
   "private": true,
   "scripts": {
