--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electro-world",
-  "homepage": "https://serhii-k5.github.io/electro-world/",
+  "name": "electro-world-old",
+  "homepage": "https://serhii-k5.github.io/electro-world-old/",
   "version": "1.0.0",
   "private": true,
   "scripts": {
