--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "electro-world-old",
-  "homepage": "https://serhii-k5.github.io/electro-world-old/",
-  "version": "1.0.0",
+  "name": "electro-world",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
-  },
+  "homepage": "https://serhii-k5.github.io/electro-world/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -19,7 +16,21 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "web-vitals": "^2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
