--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
