--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
+    "require-context": "^1.1.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
   },
